entity_macros/tests/ui/derive/ent/unexpected-ent-typetag-when-not-available.stderr
error[E0433]: failed to resolve: could not find `typetag` in `{{root}}`
 --> $DIR/unexpected-ent-typetag-when-not-available.rs:3:17
  |
3 | #[derive(Clone, Ent)]
  |                 ^^^ could not find `typetag` in `{{root}}`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
